--- a/terapeuta/templates/calendar.html
+++ b/terapeuta/templates/calendar.html
@@ -35,23 +35,23 @@
             <h2>Agendar Cita</h2>
             <form id="nuevaCita">
                 {% csrf_token %}
-                <label for="titulo">Título</label>
-                <input type="text" id="titulo" name="titulo" required>
+                <label for="titulo">Título</label><br>
+                <input type="text" id="titulo" name="titulo" required><br>
 
-                <label for="paciente">Paciente</label>
-                <input type="text" id="paciente" name="paciente" required>
+                <label for="paciente">Paciente</label><br>
+                <input type="text" id="paciente" name="paciente" required><br>
 
-                <label for="Fecha">Fecha</label>
-                <input type="date" id="Fecha" name="Fecha" required>
+                <label for="Fecha">Fecha</label><br>
+                <input type="date" id="Fecha" name="Fecha" required><br>
 
-                <label for="hora">Hora</label>
-                <input type="time" id="hora" name="hora" required>
+                <label for="hora">Hora</label><br>
+                <input type="time" id="hora" name="hora" required><br>
 
-                <label for="sala">Sala</label>
-                <input type="text" id="sala" name="sala" required>
+                <label for="sala">Sala</label><br>
+                <input type="text" id="sala" name="sala" required><br>
 
-                <label for="detalle">Detalle</label>
-                <input type="text" id="detalle" name="detalle" required>
+                <label for="detalle">Detalle</label><br>
+                <input type="text" id="detalle" name="detalle" required><br>
                 
                 <div class="modal-footer">
                     <button type="button" class="cancel-btn" id="cancelarNuevaCita">Cancelar</button>
