--- a/terapeuta/static/css/calendar.css
+++ b/terapeuta/static/css/calendar.css
@@ -151,27 +151,34 @@ button:hover {
     overflow: auto;
 }
 
-.popup-content, 
 .modal-content {
     display: flex;
     flex-direction: column;
     background-color: white;
     margin: 2% auto;
+    margin-top: 7px;
     padding: 20px;
     border-radius: 20px;
     width: 35%;
     height: 90%;
-    position: relative;
+    position: fixed;
     z-index: 101;
     text-align: center;
-    box-sizing: border-box; /* Nuevo */
-    overflow-y: auto; /* Permitir scroll si el contenido excede la altura */
+    box-sizing: border-box; /* Asegura que padding y border no afecten las dimensiones */
+    overflow-y: auto; /* Habilita scroll vertical si el contenido es mayor que el contenedor */
+    top: 50%; /* Centra verticalmente */
+    left: 50%; /* Centra horizontalmente */
+    transform: translate(-50%, -50%); /* Ajuste de posición para centrar */
 }
 
 
+
 .modal-content input {
+    background-color: #E0E0E0;
     align-items: center;
     font-size: 16px;
+    font-weight:300;
+    color: black;
     border-radius: 5px;
     border: 0.5px solid black;
     width: 100%;
@@ -237,15 +244,42 @@ button:hover {
     background-color: #006A60;
 }
 
-.cita-item {
-    padding: 10px;
-    border: 1px solid #ddd;
-    border-radius: 5px;
-    background-color: #f9f9f9;
-    margin-bottom: 10px;
-    text-align: center;
+
+@media (max-width: 320px) {
+    .modal-content {
+        width: 70%;
+        height: 55%;
+
+    }
 }
 
+@media (min-width: 320px) and (max-width: 375px) {
+    .modal-content {
+        width: 70%;
+        height: 70%;
+    }
+}
+
+@media (min-width: 375px) and (max-width: 425px) {
+    .modal-content {
+        width: 70%;
+        height: 75%;
+    }
+}
+
+@media (min-width: 425px) and (max-width: 590px) {
+    .modal-content {
+        width: 75%;
+        height: 75%;
+    }
+}
+
+@media (min-width: 590px) and (max-width: 768px) {
+    .modal-content {
+        width: 75%;
+        height: 85%;
+    }
+}
 
 /* Media Queries */
 @media (min-width: 768px) and (max-width: 1023px) {
