--- a/terapeuta/templates/calendar.html
+++ b/terapeuta/templates/calendar.html
@@ -33,16 +33,21 @@
         <div class="modal-content">
             <span class="close" id="cerrarModal">&times;</span>
             <h2>Agendar Cita</h2>
-            <form id="nuevaCita">
+            <form id="nuevaCita" action="{% url 'agendar_cita' %}" method="POST">
                 {% csrf_token %}
                 <label for="titulo">Título</label><br>
                 <input type="text" id="titulo" name="titulo" required><br>
 
                 <label for="paciente">Paciente</label><br>
-                <input type="text" id="paciente" name="paciente" required><br>
+                <select id="paciente" name="paciente" required>
+                    <option value="" disabled selected>Selecciona un paciente</option>
+                    {% for paciente in pacientes %}
+                        <option value="{{ paciente.id }}">{{ paciente.first_name }}</option>
+                    {% endfor %}
+                </select><br>
 
                 <label for="Fecha">Fecha</label><br>
-                <input type="date" id="Fecha" name="Fecha" required><br>
+                <input type="date" id="fecha" name="fecha" required><br>
 
                 <label for="hora">Hora</label><br>
                 <input type="time" id="hora" name="hora" required><br>
