--- a/terapeuta/static/css/historial_paciente.css
+++ b/terapeuta/static/css/historial_paciente.css
@@ -572,6 +572,35 @@
     text-decoration: none;
     cursor: pointer;
 }
+/* Estilos para el botón adicional de historial completo */
+.boton-historial {
+    display: flex;
+    justify-content: flex-end; /* Alinea el botón a la derecha */
+    margin-top: 10px; /* Espacio arriba del botón */
+}
+
+.btn-historial {
+    background-color: #4CAF50; /* Color de fondo verde */
+    color: white; /* Texto en blanco */
+    padding: 10px 20px; /* Espaciado interno */
+    text-align: center; /* Centrar el texto */
+    text-decoration: none; /* Eliminar subrayado */
+    display: inline-block; /* Mostrar como bloque en línea */
+    font-size: 16px; /* Tamaño de fuente */
+    border: none; /* Sin borde */
+    border-radius: 5px; /* Bordes redondeados */
+    cursor: pointer; /* Cursor tipo puntero */
+    transition: background-color 0.3s ease; /* Transición suave al pasar el mouse */
+}
+
+.btn-historial:hover {
+    background-color: #45a049; /* Color de fondo al pasar el mouse */
+}
+
+.btn-historial i {
+    margin-left: 5px; /* Espacio entre el texto y el icono */
+}
+
 
 /* Estilos específicos para el formulario Editar Rutina */
 #editarRutinaForm {
