--- a/terapeuta/static/css/historial_paciente.css
+++ b/terapeuta/static/css/historial_paciente.css
@@ -575,32 +575,31 @@
 /* Estilos para el botón adicional de historial completo */
 .boton-historial {
     display: flex;
-    justify-content: flex-end; /* Alinea el botón a la derecha */
-    margin-top: 10px; /* Espacio arriba del botón */
+    justify-content: flex-end;
+    margin-top: 10px;
 }
 
 .btn-historial {
-    background-color: #4CAF50; /* Color de fondo verde */
-    color: white; /* Texto en blanco */
-    padding: 10px 20px; /* Espaciado interno */
-    text-align: center; /* Centrar el texto */
-    text-decoration: none; /* Eliminar subrayado */
-    display: inline-block; /* Mostrar como bloque en línea */
-    font-size: 16px; /* Tamaño de fuente */
-    border: none; /* Sin borde */
-    border-radius: 5px; /* Bordes redondeados */
-    cursor: pointer; /* Cursor tipo puntero */
-    transition: background-color 0.3s ease; /* Transición suave al pasar el mouse */
+    background-color: #008CAB;
+    color: white;
+    padding: 10px 20px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    border: none;
+    border-radius: 8px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 .btn-historial:hover {
-    background-color: #45a049; /* Color de fondo al pasar el mouse */
+    background-color: #005f6b;
 }
 
 .btn-historial i {
-    margin-left: 5px; /* Espacio entre el texto y el icono */
+    margin-left: 5px;
 }
-
 
 /* Estilos específicos para el formulario Editar Rutina */
 #editarRutinaForm {
