--- a/terapeuta/static/css/historial_sesiones.css
+++ b/terapeuta/static/css/historial_sesiones.css
@@ -1,38 +1,60 @@
-/* Encabezado del Historial */
+.back-button {
+  color: #000;
+  font-size: 24px;
+  text-decoration: none;
+  margin-right: 20px;
+  display: flex;
+  align-items: center;
+  margin-top: -50px;
+}
+
+.back-button:hover {
+  color: #008CAB;
+  transition: color 0.3s ease;
+}
+
+.contenedor-header h1 {
+  display: flex;
+  margin: 0;
+  font-size: 60px;
+  font-weight: 500;
+}
+
 .encabezado-historial {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 20px;
-    background-color: #f5f5f5;
   }
   
-  /* Nombre del Paciente */
   .nombre-paciente h2 {
-    margin: 0;
-    font-size: 24px;
+    display: flex;
+    margin-left: 37px;
+    font-size: 30px;
   }
   
-  /* Seleccionar Rutina */
   .seleccionar-rutina {
     position: relative;
   }
-  
+
   .btn-desplegable {
-    background-color: #007BFF;
+    background-color: #008CAB;
     color: white;
     padding: 10px 15px;
     font-size: 16px;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    margin-right: 30px;
+  }
+  .btn-desplegable:hover {
+    background-color: #005f6b;
   }
   
   .btn-desplegable i {
     margin-left: 5px;
   }
   
-  /* Contenido Desplegable */
 .contenido-desplegable {
     display: none;
     position: absolute;
@@ -59,8 +81,66 @@
     padding: 12px 16px;
     text-decoration: none;
     display: block;
+    margin-right:30px ;
   }
   
   .contenido-desplegable li a:hover {
     background-color: #f1f1f1;
   }
+
+  /*----------------- sesiones ----------------------- */
+.cards-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  padding: 20px;
+  gap: 20px;
+}
+
+.sesion-card {
+  background-color: #ffffff;
+  border: 1px solid #dddddd;
+  border-radius: 8px;
+  width: 95%;
+  padding: 20px;
+  margin-bottom: 20px;
+  box-shadow: 0 2px 5px rgba(0,0,0,0.1);
+  display: flex;
+}
+
+.sesion-card h3 {
+  margin-top: -15px;
+  color: #008CAB;
+}
+
+.sesion-detalles {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 45px;
+}
+
+.detalle {
+  margin-left: 20px;
+  justify-content: space-between;
+  align-content: center;
+}
+
+.btn-ver-grafico {
+  display: flex;
+  justify-content: flex-end;
+  background-color: #008CAB;
+  color: white;
+  padding: 8px 12px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+.btn-ver-grafico:hover {
+  background-color: #005f6b;
+}
+
+.btn-ver-grafico i {
+  margin-left: 5px;
+}
