--- a/terapeuta/templates/historial_sesiones.html
+++ b/terapeuta/templates/historial_sesiones.html
@@ -28,7 +28,11 @@
     <!-- Botón Desplegable para Seleccionar Rutina -->
     <div class="seleccionar-rutina">
       <button class="btn-desplegable" id="btnDesplegableRutina">
-        Seleccionar Rutina <i class="fas fa-chevron-down"></i>
+        {% if rutina_seleccionada %}
+          Rutina {{ forloop.counter }} - {{ rutina_seleccionada.fecha_inicio|date:"d/m/Y" }} <i class="fas fa-chevron-down"></i>
+        {% else %}
+          Seleccionar Rutina <i class="fas fa-chevron-down"></i>
+        {% endif %}
       </button>
       <div class="contenido-desplegable" id="contenidoDesplegableRutina">
         <ul>
@@ -53,15 +57,23 @@
         <div class="sesion-card">
           <h3>Sesión {{ forloop.counter }}</h3>
           <div class="sesion-detalles">
-            <p><strong>Fecha:</strong> {{ sesion.fecha|date:"d/m/Y" }}</p>
-            <p><strong>Hora:</strong> {{ sesion.hora_inicio|time:"H:i" }} - {{ sesion.hora_final|time:"H:i" }}</p>
-            <p><strong>Duración:</strong> {{ sesion.duracion }} minutos</p>
-            <p><strong>Estado:</strong> {{ sesion.estado }}</p>
-          </div>
-          <div class="boton-ver-grafico">
-            <button class="btn-ver-grafico" onclick="enviarIdSesion({{ sesion.id }})">
-              Ver Gráfico <i class="fas fa-chart-line"></i>
-            </button>
+            <div class="detalle">
+              <p><strong>Fecha:</strong> {{ sesion.fecha|date:"d/m/Y" }}</p>
+            </div>
+            <div class="detalle">
+              <p><strong>Hora:</strong> {{ sesion.hora_inicio|time:"H:i" }} - {{ sesion.hora_final|time:"H:i" }}</p>
+            </div>
+            <div class="detalle">
+              <p><strong>Duración:</strong> {{ sesion.duracion }} minutos</p>
+            </div>
+            <div class="detalle">
+              <p><strong>Estado:</strong> {{ sesion.estado }}</p>
+            </div>
+            <div class="detalle">
+              <button class="btn-ver-grafico" onclick="enviarIdSesion({{ sesion.id }})">
+                Ver Gráfico <i class="fas fa-chart-line"></i>
+              </button>
+            </div>
           </div>
         </div>
       {% endfor %}
