--- a/terapeuta/templates/calendar.html
+++ b/terapeuta/templates/calendar.html
@@ -33,7 +33,7 @@
         <div class="modal-content">
             <span class="close" id="cerrarModal">&times;</span>
             <h2>Agendar Cita</h2>
-            <form id="nuevaCita" action="{% url 'agendar_cita' %}" method="POST">
+            <form id="formNuevaCita" action="{% url 'agendar_cita' %}" method="POST">
                 {% csrf_token %}
                 <label for="titulo">Título</label><br>
                 <input type="text" id="titulo" name="titulo" required><br>
@@ -46,7 +46,7 @@
                     {% endfor %}
                 </select><br>
 
-                <label for="Fecha">Fecha</label><br>
+                <label for="fecha">Fecha</label><br>
                 <input type="date" id="fecha" name="fecha" required><br>
 
                 <label for="hora">Hora</label><br>
@@ -66,8 +66,11 @@
         </div>
     </div>
 
+    <!-- Incluir las citas como variable JavaScript -->
+    <script>
+        const citas = {{ fechas_citas|safe }};
+    </script>
     <script src="{% static 'js/calendar.js' %}"></script>
 </body>
 
 </html>
-    
