--- a/terapeuta/templates/calendar.html
+++ b/terapeuta/templates/calendar.html
@@ -28,43 +28,54 @@
         <div id="calendar"></div>
     </div>
 
-    <!-- Modal Popup para añadir nueva Cita -->
-    <div id="nuevaCita" class="modal">
-        <div class="modal-content">
-            <span class="close" id="cerrarModal">&times;</span>
-            <h2>Agendar Cita</h2>
-            <form id="formNuevaCita" action="{% url 'agendar_cita' %}" method="POST">
-                {% csrf_token %}
-                <label for="titulo">Título</label><br>
-                <input type="text" id="titulo" name="titulo" required><br>
+<!-- Modal Popup para añadir nueva Cita -->
+<div id="nuevaCita" class="modal">
+    <div class="modal-content">
+        <span class="close" id="cerrarModal">&times;</span>
+        <h2>Agendar Cita</h2>
+        <form id="formNuevaCita" action="{% url 'agendar_cita' %}" method="POST">
+            {% csrf_token %}
+            <label for="titulo">Título</label>
+            <input type="text" id="titulo" name="titulo" required>
 
-                <label for="paciente">Paciente</label><br>
-                <select id="paciente" name="paciente" required>
-                    <option value="" disabled selected>Selecciona un paciente</option>
-                    {% for paciente in pacientes %}
-                        <option value="{{ paciente.id }}">{{ paciente.first_name }}</option>
-                    {% endfor %}
-                </select><br>
+            <label for="paciente">Paciente</label>
+            <select id="paciente" name="paciente" required>
+                <option value="" disabled selected>Selecciona un paciente</option>
+                {% for paciente in pacientes %}
+                    <option value="{{ paciente.id }}">{{ paciente.first_name }}</option>
+                {% endfor %}
+            </select>
 
-                <label for="fecha">Fecha</label><br>
-                <input type="date" id="fecha" name="fecha" required><br>
+            <label for="fecha">Fecha</label>
+            <input type="date" id="fecha" name="fecha" required>
 
-                <label for="hora">Hora</label><br>
-                <input type="time" id="hora" name="hora" required><br>
-
-                <label for="sala">Sala</label><br>
-                <input type="text" id="sala" name="sala" required><br>
-
-                <label for="detalle">Detalle</label><br>
-                <input type="text" id="detalle" name="detalle" required><br>
-                
-                <div class="modal-footer">
-                    <button type="button" class="cancel-btn" id="cancelarNuevaCita">Cancelar</button>
-                    <button type="submit" class="confirm-btn">Confirmar</button>
+            <!-- Nueva estructura de etiquetas para Hora -->
+            <div class="hora-container">
+                <div class="hora-item">
+                    <label for="hora_inicio">Hora Inicio</label>
+                    <input class="hora_inicio" type="time" id="hora_inicio" name="hora_inicio" required>
                 </div>
-            </form>
-        </div>
+                <div class="hora-item">
+                    <label for="hora_final">Hora Final</label>
+                    <input class="hora_final" type="time" id="hora_final" name="hora_final" required>
+                </div>
+            </div>
+
+            <label for="sala">Sala</label>
+            <input type="text" id="sala" name="sala" required>
+
+            <label for="detalle">Detalle</label>
+            <input type="text" id="detalle" name="detalle" required>
+
+            <div class="modal-footer">
+                <button type="button" class="cancel-btn" id="cancelarNuevaCita">Cancelar</button>
+                <button type="submit" class="confirm-btn">Confirmar</button>
+            </div>
+        </form>
     </div>
+</div>
+
+
 
     <!-- Incluir las citas como variable JavaScript -->
     <script>
