--- a/administrador/static/css/listar_pacientes_administrador.css
+++ b/administrador/static/css/listar_pacientes_administrador.css
@@ -268,6 +268,49 @@ input[type="checkbox"] {
     margin-left: 10px;
 }
 
+/* Estilos de paginación */
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.pagination .step-links a {
+    color: white;
+    background-color: #001058;
+    padding: 10px 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.pagination .step-links a:hover {
+    background-color: #002080
+}
+
+.pagination .current {
+    padding: 10px 15px;
+    background-color: #D9D9D9;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+.pagination .step-links {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+
+.disabled {
+    color: white;
+    background-color: #d9d9d9;
+    padding: 10px 10px;
+    border-radius: 5px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
 @media screen and (max-width: 1200px){
     .final-tabla a img {
         width: 40px;
