--- a/administrador/templates/agregar_paciente_admin.html
+++ b/administrador/templates/agregar_paciente_admin.html
@@ -11,7 +11,7 @@
 {% endblock %}
 
 {% block header %}
-<a href="{% url 'admin_pacientes' %}">
+<a href="{% url 'listar_pacientes_activos' %}">
     <img src="{% static 'icons/Volver-atras.svg' %}" alt="">
 </a>
 <h1>Agregar paciente</h1>
@@ -242,7 +242,7 @@
 </script>
 <script>
     document.getElementById("boton-cancelar").addEventListener("click", function(){
-        window.location.href = "{% url 'admin_pacientes' %}";
+        window.location.href = "{% url 'listar_pacientes_activos' %}";
     });
 </script>
 {% block extra_js %}
