--- a/recepcionista/static/css/recepcionista_terapeutas_activos.css
+++ b/recepcionista/static/css/recepcionista_terapeutas_activos.css
@@ -216,6 +216,10 @@
     font-size: 14px;
 }
 
+.pagination .step-links a:hover {
+    background-color: #535c83
+}
+
 .pagination .current {
     padding: 10px 15px;
     background-color: #D9D9D9;
@@ -231,7 +235,7 @@
 
 .disabled {
     color: white;
-    background-color: #373d58;
+    background-color: #d9d9d9;
     padding: 10px 10px;
     border-radius: 5px;
     font-size: 14px;
