--- a/terapeuta/static/css/paciente_terapeuta.css
+++ b/terapeuta/static/css/paciente_terapeuta.css
@@ -108,6 +108,49 @@
     height: 50px;
 }
 
+/* Estilos de paginación */
+.pagination {
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+.pagination .step-links a {
+    color: white;
+    background-color: #008cab;
+    padding: 10px 10px;
+    border-radius: 5px;
+    text-decoration: none;
+    font-size: 14px;
+}
+
+.pagination .step-links a:hover {
+    background-color: #005f6b;
+}
+
+.pagination .current {
+    padding: 10px 15px;
+    background-color: #D9D9D9;
+    border-radius: 5px;
+    font-size: 14px;
+}
+
+.pagination .step-links {
+    display: flex;
+    gap: 5px;
+    align-items: center;
+}
+
+.disabled {
+    color: white;
+    background-color: #d9d9d9;
+    padding: 10px 10px;
+    border-radius: 5px;
+    font-size: 14px;
+    cursor: pointer;
+}
+
 @media screen and (max-width: 1200px){
     .contenedor-header{
         flex-flow: column nowrap;
