--- a/terapeuta/templates/paciente_terapeuta.html
+++ b/terapeuta/templates/paciente_terapeuta.html
@@ -66,22 +66,37 @@
 </div>
 
     <!-- Paginación -->
-{% if total_pacientes > 6 %}
-<div class="pagination">
-    {% if pacientes.has_previous %}
-        <a href="?search={{ request.GET.search }}&page={{ pacientes.previous_page_number }}" class="prev-button">
-            <img src="{% static 'icons/chevron-left-solid.svg' %}" alt="Anterior" class="previous-icon">
-        </a>
-    {% endif %}
-    <span id="pageNumber">{{ pacientes.number }}</span>
-    {% if pacientes.has_next %}
-        <a href="?search={{ request.GET.search }}&page={{ pacientes.next_page_number }}" class="next-button">
-            <img src="{% static 'icons/chevron-right-solid.svg' %}" alt="Siguiente" class="next-icon">
-        </a>
-    {% endif %}
-</div>
-{% endif %}
-</div>
+    <div class="pagination">
+        <span class="step-links">
+            {% if pacientes.has_previous %}
+                <a href="?page=1{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}{% if request.GET.order_by %}&order_by={{ request.GET.order_by }}{% endif %}" title="Primera Página">
+                    &#171;
+                </a>
+                <a href="?page={{ pacientes.previous_page_number }}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}{% if request.GET.order_by %}&order_by={{ request.GET.order_by }}{% endif %}" title="Página Anterior">
+                    &#8249;
+                </a>
+            {% else %}
+                <span class="disabled">&#171;</span>
+                <span class="disabled">&#8249;</span>
+            {% endif %}
+    
+            <span class="current">
+                {{ pacientes.number }}
+            </span>
+    
+            {% if pacientes.has_next %}
+                <a href="?page={{ pacientes.next_page_number }}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}{% if request.GET.order_by %}&order_by={{ request.GET.order_by }}{% endif %}" title="Página Siguiente">
+                    &#8250;
+                </a>
+                <a href="?page={{ pacientes.paginator.num_pages }}{% if request.GET.search %}&search={{ request.GET.search }}{% endif %}{% if request.GET.order_by %}&order_by={{ request.GET.order_by }}{% endif %}" title="Última Página">
+                    &#187;
+                </a>
+            {% else %}
+                <span class="disabled">&#8250;</span>
+                <span class="disabled">&#187;</span>
+            {% endif %}
+        </span>
+    </div>
 {% endblock %}
 
 {% block extra_js %}
