Refactorizacion de buscadores, cambie algunas funcionalidades para que se adapten mejor a los requerimientos de la funcionalidad

--- a/terapeuta/static/css/paciente_terapeuta.css
+++ b/terapeuta/static/css/paciente_terapeuta.css
@@ -49,11 +49,12 @@
     background-color: #f5554a;
     color: white;
     border: none;
-    padding: 8px 15px;
+    padding: 8px 10px;
     border-radius: 5px;
     cursor: pointer;
     margin-left: 20px;
     height: auto;
+    text-wrap: nowrap;  
 }
 
 .clear-button:hover {
