--- a/ortesisWeb/static/css/base/header.css
+++ b/ortesisWeb/static/css/base/header.css
@@ -24,3 +24,34 @@
     text-decoration: none;
     color: white;
 }
+
+.modal-rutinas {
+    display: none;
+    position: fixed; 
+    z-index: 1000;
+    top: 60px;
+    right: 60px;
+    width: 700px;
+    max-height: 500px;
+    overflow-y: auto;
+    background-color: #FFFFFF;
+    border: 1px solid #D9D9D9;
+    box-shadow: 0px 4px 12px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+}
+
+.modal-rutinas-content {
+    padding: 20px;
+    background-color: #FFFFFF;
+}
+
+/* Contenedor principal de cada rutina */
+#rutinas-list li {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: #D9D9D9;
+    margin-bottom: 15px;
+    padding: 25px;
+    border-radius: 5px;
+}
